[tool.poetry]
name = "markov monte carlo"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
